--- a/templates/404.html
+++ b/templates/404.html
@@ -13,9 +13,9 @@
 
     <!-- Error Page Content -->
     <div class="d-flex justify-content-center align-items-center mb-3 mt-4">
-        <img src="{{ MEDIA_URL }}bee-2.png" alt="Cartoon Bee with Trail" class="error-bee">
+        <img src="https://island-bees.s3.amazonaws.com/media/bee-2.png" alt="Cartoon Bee" class="error-bee">
         <h1 class="font-title error-title text-center mx-3 ib-lh-1">404</h1>
-        <img src="{{ MEDIA_URL }}bee-2.png" alt="Cartoon Bee with Trail" class="backwards error-bee">
+        <img src="https://island-bees.s3.amazonaws.com/media/bee-2.png" alt="Cartoon Bee" class="backwards error-bee">
     </div>
     <p>The page you are looking for doesn't exist.</p>
     
